[package]
name = "wia-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.61.3", features = [
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_Devices",
    "Win32_Devices_ImageAcquisition",
    "Win32_System_Com_StructuredStorage",
    "Win32_Graphics_Gdi"
] }
